--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "@emotion/styled": "^11.14.0",
     "framer-motion": "^12.4.3",
     "html-webpack-plugin": "^5.6.3",
+    "i18n": "^0.15.1",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "i18next-http-backend": "^1.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
