--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^7.1.5",
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
+    "typescript": "^4.9.5",
     "uuid": "^11.0.5",
     "web-vitals": "^4.2.4",
     "webpack": "^5.98.0"
